...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: AppTheme.backgroundColor,
      appBar: CustomAppbar(
        judul: "Riwayat Ajuan",
      ),
      
      // TOMBOL TAMBAH (FAB)
      floatingActionButton: Consumer<MahasiswaAjuanBimbinganViewModel>(
        builder: (context, vm, child) {
          return CustomAddFab(
...
